Binding redesigned 20210125 by Örjan Backsell